# EASE

./: .env.example  .gitignore  README.md  drizzle.config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  proxy.ts  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
.github/workflows/: ci.yml
python_service/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
python_service/app/: __init__.py  main.py
python_service/app/models/: __init__.py  document.py  risk.py
python_service/app/routers/: __init__.py  analyze.py  predict.py
python_service/app/services/: __init__.py  document_service.py  risk_service.py
python_service/tests/: __init__.py  test_api.py
src/: proxy.test.ts
src/ai/: agent.ts  index.ts
src/app/: layout.tsx  page.tsx
src/app/(dashboard)/: layout.tsx
src/app/(public)/: layout.tsx
src/app/search/: page.tsx
src/components/ai/: ChatPanel.tsx  DocSummaryPanel.tsx  OfferStrategyPanel.tsx  RiskScoreCard.tsx
src/components/calculator/: LTTCalculator.tsx
src/components/dashboard/: AIAssistantChat.tsx  ActiveStatusCard.tsx  TeamSection.tsx  TransactionTimeline.tsx  (+1 more)
src/data/: listings.ts
src/db/: index.ts  schema.sql  schema.ts  types.ts
src/emails/: DeadlineReminder.tsx  InvitationEmail.tsx  SavedSearchAlert.tsx
src/lib/: cache.test.ts  cache.ts  closing-costs.test.ts  closing-costs.ts  db.ts  deadline-checker.test.ts  deadline-checker.ts  docusign.test.ts  docusign.ts  env.test.ts  env.ts  ltt.test.ts  ltt.ts  r2.ts  repliers.test.ts  repliers.ts  saved-searches.test.ts  stripe.ts  utils.ts
src/styles/: globals.css
src/types/: index.ts  repliers.ts
(+109 files in other folders)
